# yaeger

./: .gitignore  .prettierrc  README.md  artisan-settings.aset  build_and_flash.sh  package.json  platformio.ini
.github/workflows/: main.yml
PCB/: YaegerV01BOM_FULL.csv
boards/: esp32-s3-devkitc1-n16r8.json
miniweb/: .prettierrc  index.html  package.json  vite.config.ts
miniweb/src/: chart.ts  main.ts  model.ts  pid.ts  profiling.ts  style.css  util.ts
python fig gen/: ex_roast.json  fig-gen.py  guide.md  pyproject.toml
schema/: YaegerV01BOM.csv
src/: CommandLoop.cpp  CommandLoop.h  MainLoop.cpp  MainLoop.h  api.cpp  api.h  config.h  display.cpp  display.h  fan.cpp  fan.h  heater.cpp  heater.h  logging.cpp  logging.h  main.cpp  sensors.cpp  sensors.h  wifi_setup.cpp
webserver/: index.html  package-lock.json  package.json  rollup.config.js  vite.config.ts
webserver/public/: index.html
webserver/src/: App.svelte  model.ts  store.js  store.ts
webserver/src/components/: EventButtons.svelte  FanSlider.svelte  HeaterSlider.svelte  RoastGraph.svelte  RoastSettingsDialog.svelte  SettingsDialog.svelte  TemperatureReadout.svelte
